--- a/style.css
+++ b/style.css
@@ -11,62 +11,82 @@ body {
   justify-content: center;
   align-items:center;
   margin:0;
-  overflow: hidden;
   position: relative;
+  background-color: #f6f7fb;
 }
 
 .container {
-  display: flex;
-  width: 90vw;;
-}
-
-.title {
-  position: absolute;
-  top:100px;
-  right: 0;
   text-align: center;
+}
+.progress-container {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 30px;
+  max-width: 100%;
+  width: 350px;
+}
+.progress-container::before {
+  content: '';
+  background-color: #e0e0e0;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 4px;
   width: 100%;
-  font-weight: 700;
+  transform: translateY(-50%);
+  z-index: -1;
 }
 
-.panel {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 50vh;
-  border-radius: 20px;
-  color:white;
-  flex:0.5;
-  margin: 10px;
-  position: relative;
-  transition: flex 0.6s ease-in;
+.progress {
+  background-color: #3498db;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  height: 4px;
+  width: 0%;
+  transform: translateY(-50%);
+  z-index: -1;
+  transition: .4s ease;
+}
+
+.circle {
+  background-color: white;
+  color: #999;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #e0e0e0;
+  transform: .4s ease;
+}
+
+.circle.active {
+  border-color: #3498db;
+}
+
+.btn {
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-family: inherit;
+  padding: 8px 30px;
+  margin: 5px;
+  font-size: 14px;
   cursor: pointer;
 }
 
-.panel h3 {
-  font-size: 24px;
-  font-weight: 400;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  opacity: 0;
-  margin:0;
+.btn:active {
+  transform: scale(.98);
+}
+.btn:focus{
+  outline: 0;
 }
 
-.panel.active {
-  flex:5;
-}
-.panel.active h3 {
-  opacity: 1;
-  transition: opacity 0.3s ease-in 0.4s;
-}
-
-@media(max-width: 500px){
-  .container{
-    width: 100vw;
-  }
-  .panel:nth-of-type(4),
-  .panel:nth-of-type(5){
-    display: none;
-  }
+.btn:disabled{
+  background-color: #e0e0e0;
+  cursor: not-allowed;
 }
